# SoTeleIK

./: README.md  theory.md
assets_calib/: calibrate_workspace.py  scene_triple.xml  so_arm100.xml  so_arm100_2.xml  so_arm100_3.xml
src/so100mjk/: package.xml  setup.cfg  setup.py
src/so100mjk/bag_files/: metadata.yaml
src/so100mjk/config/: arm.yaml  calibrate.yaml
src/so100mjk/so100mjk/: calibrate.py  lm_ik_parallel.py  mujoco_node.py
src/teleop_interfaces/: CMakeLists.txt  package.xml
src/teleop_interfaces/action/: IK.action
src/teleop_interfaces/msg/: CartesianGroup.msg  JointGroup.msg  JoyPad.msg  TeleopDataRaw.msg
src/teleop_interfaces/teleop_interfaces/: __init__.py
